app/src/larrere/java/ekylibre/util/antlr4/QueryLanguageParser.java
// Generated from /home/remi/Git/ekylibre/zero-android/app/src/larrere/java/ekylibre/util/antlr4/QueryLanguage.g4 by ANTLR 4.7.2
package ekylibre.util.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QueryLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, SPACE=21, CHAR=22, DIGIT=23;
	public static final int
		RULE_boolean_expression = 0, RULE_conjonctive = 1, RULE_disjunctive = 2, 
		RULE_test = 3, RULE_essence = 4, RULE_non_essence = 5, RULE_derivative = 6, 
		RULE_non_derivative = 7, RULE_inclusion = 8, RULE_indicative = 9, RULE_abilitive = 10, 
		RULE_ability = 11, RULE_ability_name = 12, RULE_ability_argument = 13, 
		RULE_variety_name = 14, RULE_indicator_name = 15, RULE_negative = 16, 
		RULE_negated_test = 17, RULE_spacer = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"boolean_expression", "conjonctive", "disjunctive", "test", "essence", 
			"non_essence", "derivative", "non_derivative", "inclusion", "indicative", 
			"abilitive", "ability", "ability_name", "ability_argument", "variety_name", 
			"indicator_name", "negative", "negated_test", "spacer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'or'", "'('", "')'", "'is'", "'isnt'", "'derives'", "'from'", 
			"'dont'", "'derive'", "'includes'", "'has'", "'frozen'", "'variable'", 
			"'indicator'", "'can'", "','", "'_'", "'not'", "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "SPACE", "CHAR", 
			"DIGIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QueryLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QueryLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Boolean_expressionContext extends ParserRuleContext {
		public DisjunctiveContext disjunctive() {
			return getRuleContext(DisjunctiveContext.class,0);
		}
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public Boolean_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterBoolean_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitBoolean_expression(this);
		}
	}

	public final Boolean_expressionContext boolean_expression() throws RecognitionException {
		Boolean_expressionContext _localctx = new Boolean_expressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_boolean_expression);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				disjunctive();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				test();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConjonctiveContext extends ParserRuleContext {
		public TestContext head;
		public ConjonctiveContext operand;
		public List<SpacerContext> spacer() {
			return getRuleContexts(SpacerContext.class);
		}
		public SpacerContext spacer(int i) {
			return getRuleContext(SpacerContext.class,i);
		}
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public ConjonctiveContext conjonctive() {
			return getRuleContext(ConjonctiveContext.class,0);
		}
		public ConjonctiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjonctive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterConjonctive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitConjonctive(this);
		}
	}

	public final ConjonctiveContext conjonctive() throws RecognitionException {
		ConjonctiveContext _localctx = new ConjonctiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_conjonctive);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				((ConjonctiveContext)_localctx).head = test();
				setState(43);
				spacer();
				setState(44);
				match(T__0);
				setState(45);
				spacer();
				setState(46);
				((ConjonctiveContext)_localctx).operand = conjonctive();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				test();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjunctiveContext extends ParserRuleContext {
		public ConjonctiveContext head;
		public DisjunctiveContext operand;
		public List<SpacerContext> spacer() {
			return getRuleContexts(SpacerContext.class);
		}
		public SpacerContext spacer(int i) {
			return getRuleContext(SpacerContext.class,i);
		}
		public ConjonctiveContext conjonctive() {
			return getRuleContext(ConjonctiveContext.class,0);
		}
		public DisjunctiveContext disjunctive() {
			return getRuleContext(DisjunctiveContext.class,0);
		}
		public DisjunctiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjunctive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterDisjunctive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitDisjunctive(this);
		}
	}

	public final DisjunctiveContext disjunctive() throws RecognitionException {
		DisjunctiveContext _localctx = new DisjunctiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_disjunctive);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				((DisjunctiveContext)_localctx).head = conjonctive();
				setState(52);
				spacer();
				setState(53);
				match(T__1);
				setState(54);
				spacer();
				setState(55);
				((DisjunctiveContext)_localctx).operand = disjunctive();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				conjonctive();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestContext extends ParserRuleContext {
		public AbilitiveContext abilitive() {
			return getRuleContext(AbilitiveContext.class,0);
		}
		public EssenceContext essence() {
			return getRuleContext(EssenceContext.class,0);
		}
		public Non_essenceContext non_essence() {
			return getRuleContext(Non_essenceContext.class,0);
		}
		public DerivativeContext derivative() {
			return getRuleContext(DerivativeContext.class,0);
		}
		public Non_derivativeContext non_derivative() {
			return getRuleContext(Non_derivativeContext.class,0);
		}
		public InclusionContext inclusion() {
			return getRuleContext(InclusionContext.class,0);
		}
		public IndicativeContext indicative() {
			return getRuleContext(IndicativeContext.class,0);
		}
		public NegativeContext negative() {
			return getRuleContext(NegativeContext.class,0);
		}
		public Boolean_expressionContext boolean_expression() {
			return getRuleContext(Boolean_expressionContext.class,0);
		}
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterTest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitTest(this);
		}
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_test);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				abilitive();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				essence();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				non_essence();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				derivative();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				non_derivative();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 6);
				{
				setState(65);
				inclusion();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 7);
				{
				setState(66);
				indicative();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 8);
				{
				setState(67);
				negative();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 9);
				{
				setState(68);
				match(T__2);
				setState(69);
				boolean_expression();
				setState(70);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EssenceContext extends ParserRuleContext {
		public SpacerContext spacer() {
			return getRuleContext(SpacerContext.class,0);
		}
		public Variety_nameContext variety_name() {
			return getRuleContext(Variety_nameContext.class,0);
		}
		public EssenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_essence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterEssence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitEssence(this);
		}
	}

	public final EssenceContext essence() throws RecognitionException {
		EssenceContext _localctx = new EssenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_essence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__4);
			setState(75);
			spacer();
			setState(76);
			variety_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_essenceContext extends ParserRuleContext {
		public SpacerContext spacer() {
			return getRuleContext(SpacerContext.class,0);
		}
		public Variety_nameContext variety_name() {
			return getRuleContext(Variety_nameContext.class,0);
		}
		public Non_essenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_essence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterNon_essence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitNon_essence(this);
		}
	}

	public final Non_essenceContext non_essence() throws RecognitionException {
		Non_essenceContext _localctx = new Non_essenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_non_essence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__5);
			setState(79);
			spacer();
			setState(80);
			variety_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DerivativeContext extends ParserRuleContext {
		public List<SpacerContext> spacer() {
			return getRuleContexts(SpacerContext.class);
		}
		public SpacerContext spacer(int i) {
			return getRuleContext(SpacerContext.class,i);
		}
		public Variety_nameContext variety_name() {
			return getRuleContext(Variety_nameContext.class,0);
		}
		public DerivativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_derivative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterDerivative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitDerivative(this);
		}
	}

	public final DerivativeContext derivative() throws RecognitionException {
		DerivativeContext _localctx = new DerivativeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_derivative);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__6);
			setState(83);
			spacer();
			setState(84);
			match(T__7);
			setState(85);
			spacer();
			setState(86);
			variety_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_derivativeContext extends ParserRuleContext {
		public List<SpacerContext> spacer() {
			return getRuleContexts(SpacerContext.class);
		}
		public SpacerContext spacer(int i) {
			return getRuleContext(SpacerContext.class,i);
		}
		public Variety_nameContext variety_name() {
			return getRuleContext(Variety_nameContext.class,0);
		}
		public Non_derivativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_derivative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterNon_derivative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitNon_derivative(this);
		}
	}

	public final Non_derivativeContext non_derivative() throws RecognitionException {
		Non_derivativeContext _localctx = new Non_derivativeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_non_derivative);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__8);
			setState(89);
			spacer();
			setState(90);
			match(T__9);
			setState(91);
			spacer();
			setState(92);
			match(T__7);
			setState(93);
			spacer();
			setState(94);
			variety_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InclusionContext extends ParserRuleContext {
		public SpacerContext spacer() {
			return getRuleContext(SpacerContext.class,0);
		}
		public Variety_nameContext variety_name() {
			return getRuleContext(Variety_nameContext.class,0);
		}
		public InclusionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inclusion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterInclusion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitInclusion(this);
		}
	}

	public final InclusionContext inclusion() throws RecognitionException {
		InclusionContext _localctx = new InclusionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inclusion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__10);
			setState(97);
			spacer();
			setState(98);
			variety_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndicativeContext extends ParserRuleContext {
		public List<SpacerContext> spacer() {
			return getRuleContexts(SpacerContext.class);
		}
		public SpacerContext spacer(int i) {
			return getRuleContext(SpacerContext.class,i);
		}
		public Indicator_nameContext indicator_name() {
			return getRuleContext(Indicator_nameContext.class,0);
		}
		public IndicativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indicative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterIndicative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitIndicative(this);
		}
	}

	public final IndicativeContext indicative() throws RecognitionException {
		IndicativeContext _localctx = new IndicativeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_indicative);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__11);
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(101);
				spacer();
				setState(102);
				_la = _input.LA(1);
				if ( !(_la==T__12 || _la==T__13) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
			setState(106);
			spacer();
			setState(107);
			match(T__14);
			setState(108);
			spacer();
			setState(109);
			indicator_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbilitiveContext extends ParserRuleContext {
		public SpacerContext spacer() {
			return getRuleContext(SpacerContext.class,0);
		}
		public AbilityContext ability() {
			return getRuleContext(AbilityContext.class,0);
		}
		public AbilitiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abilitive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterAbilitive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitAbilitive(this);
		}
	}

	public final AbilitiveContext abilitive() throws RecognitionException {
		AbilitiveContext _localctx = new AbilitiveContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_abilitive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__15);
			setState(112);
			spacer();
			setState(113);
			ability();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbilityContext extends ParserRuleContext {
		public Ability_nameContext ability_name() {
			return getRuleContext(Ability_nameContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(QueryLanguageParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(QueryLanguageParser.SPACE, i);
		}
		public List<Ability_argumentContext> ability_argument() {
			return getRuleContexts(Ability_argumentContext.class);
		}
		public Ability_argumentContext ability_argument(int i) {
			return getRuleContext(Ability_argumentContext.class,i);
		}
		public AbilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ability; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterAbility(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitAbility(this);
		}
	}

	public final AbilityContext ability() throws RecognitionException {
		AbilityContext _localctx = new AbilityContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ability);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			ability_name();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(116);
				match(T__2);
				setState(118);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(117);
					match(SPACE);
					}
					break;
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CHAR) {
					{
					setState(120);
					ability_argument();
					setState(131);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(122);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la==SPACE) {
								{
								setState(121);
								match(SPACE);
								}
							}

							setState(124);
							match(T__16);
							setState(126);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la==SPACE) {
								{
								setState(125);
								match(SPACE);
								}
							}

							setState(128);
							ability_argument();
							}
							} 
						}
						setState(133);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					}
					}
				}

				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(136);
					match(SPACE);
					}
				}

				setState(139);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ability_nameContext extends ParserRuleContext {
		public List<TerminalNode> CHAR() { return getTokens(QueryLanguageParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(QueryLanguageParser.CHAR, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(QueryLanguageParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(QueryLanguageParser.DIGIT, i);
		}
		public Ability_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ability_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterAbility_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitAbility_name(this);
		}
	}

	public final Ability_nameContext ability_name() throws RecognitionException {
		Ability_nameContext _localctx = new Ability_nameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ability_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(CHAR);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CHAR || _la==DIGIT) {
				{
				{
				setState(143);
				_la = _input.LA(1);
				if ( !(_la==CHAR || _la==DIGIT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17) {
				{
				{
				setState(149);
				match(T__17);
				setState(151); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(150);
					_la = _input.LA(1);
					if ( !(_la==CHAR || _la==DIGIT) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(153); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CHAR || _la==DIGIT );
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ability_argumentContext extends ParserRuleContext {
		public List<TerminalNode> CHAR() { return getTokens(QueryLanguageParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(QueryLanguageParser.CHAR, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(QueryLanguageParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(QueryLanguageParser.DIGIT, i);
		}
		public Ability_argumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ability_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).enterAbility_argument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryLanguageListener ) ((QueryLanguageListener)listener).exitAbility_argument(this);
		}
	}
